# yardlet

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md
.agents/: approval-policy.yaml  billing-policy.yaml  interaction-policy.yaml  work-queue.yaml  workers.yaml  yard.yaml
.agents/agents/: README.md
.agents/rules/: multi-session-safety.md  worktree-tooling.md
.codex/: README.md
.github/workflows/: ci.yml  release.yml
assets/builtin-skills/: README.md
docs/: absorption.md  builtin-skill-library.md  harness.md  identity.md  memory-trust-mining.md  parallel-queue.md  routing-and-telemetry.md  routing-research.md  self-healing-workspace-state.md  skills.md  v0.10-shared-session-state-contract.md  v0.8-decisions.md  v0.9-mechanism-absorption.md  yard-deck.html
docs/comparison/: agent-cli-mechanisms.md  benchmarks.md  launch-copy-draft.md  yield-vs-workers.md
docs/research/: builtin-skill-candidate-ledger.md  builtin-skill-local-evidence.md
docs/reviews/: builtin-skill-library-reverification.md  builtin-skill-library-review.md  v010-001-shared-state-review.md  v010-002-independent-review.md  v010-002-yardlet-on-yardlet.md  v010-002a-missing-capability-dogfood.md  v010-003-dogfood.md  v010-003-independent-review.md  v010-003-remediation.md
seeds/: yard-bootstrap-queue.yaml  yardlet-bootstrap-queue.yaml
src/: approvals.rs  capability_discovery.rs  cli.rs  compact.rs  eval_fixtures.rs  evaluator.rs  git_finish.rs  guard.rs  hooks.rs  init.rs  inspect.rs  main.rs  memory.rs  packet.rs  parallel.rs  planner.rs  planning.rs  report.rs  resource.rs  review.rs  routing.rs  rubric.rs  run.rs  schemas.rs  skill_author.rs  skills.rs  snapshot.rs  state.rs  telemetry.rs  templates.rs  trust.rs  watch.rs  yaml.rs
src/ui/: home.rs  i18n.rs  ime.rs  mod.rs  (+1 more)
tests/: builtin_skill_bundle_integrity.rs  fixture_binary_freshness_process.rs  git_finish_process_recovery.rs  init_symlink_process.rs  provider_response_refusal_process.rs  same_intent_replan_process.rs  state_architecture_guard.rs  v010_001_shared_state_replay.rs  v010_001a_serial_git_finish_process.rs  v010_002_conversational_planning_process.rs  v010_002a_capability_discovery_process.rs  v010_003_task_channels_process.rs  v010_004_local_app_dogfood.rs  v010_004_resource_operations.rs  v010_004_resource_publication.rs
(+122 files in other folders)
