[package]
name = "yard"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
description = "Yard: a local AI workbench. Plan, queue, route, validate, and hand off long-running work using subscription-backed Codex and Claude Code CLIs as hidden workers. Zero AI API keys required."
license = "MIT"
repository = "https://github.com/zzunkie/yard"
keywords = ["ai", "agent", "tui", "workbench", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
