[package]
name = "yardlet"
version = "0.8.0"
edition = "2021"
rust-version = "1.82"
description = "Yardlet: a local AI workbench. Plan, queue, route, validate, and hand off long-running work using your already-installed Codex and Claude Code CLIs as hidden workers."
license = "MIT"
repository = "https://github.com/zzunkie/yardlet"
keywords = ["ai", "agent", "tui", "workbench", "cli"]
categories = ["command-line-utilities", "development-tools"]
# Ship only what is needed to build/use the crate. Keeps internal/non-public
# material (repo's own .agents state, seed queues, CI, backups) out of the
# published tarball, which is permanent on crates.io.
exclude = ["seeds/**", ".github/**", ".agents/**", ".claude", ".codex", "*.bundle"]

[[bin]]
name = "yardlet"
path = "src/main.rs"

# cargo-binstall: fetch the prebuilt binary attached to the GitHub release
# (see .github/workflows/release.yml) instead of compiling from source.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/yardlet-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "yardlet"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
